I regret my life choices some days